# alea

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: main.yml
cmake/: aleaConfig.cmake.in
include/alea/: alea.h  algorithms.h
install/lib/cmake/alea/: aleaTargets-noconfig.cmake  aleaTargets.cmake
src/: alea-builtin.c  alea-builtin.h  alea-hkdf.c  alea-hkdf.h  alea-internal.h  alea.c  fips202.c  fips202.h
test/: CMakeLists.txt  dudect_wrapper.c  dudect_wrapper.h  functionality-test.c  lowlevel-test.c  timing-test.c
